# filter-porting

./: .gitignore  AADCConfig.cmake  AADC_PRIVATE.cmake  Readme.txt  build_base.sh  build_base_win.bat  build_demo.sh  build_demo_win.bat  build_user.sh  build_user_win.bat  changelog.txt  install.sh  licence.txt
config/LiveVisualization/adtfsessions/: default_session.adtfuilayout
config/LiveVisualization/adtfsessions/adtfgraphs/: default_graph.adtfconfiglayout  default_graph.adtfgraph  default_graph.adtfproperties
config/LiveVisualization/adtfsessions/adtfsystems/: default_system.adtfproperties  default_system.adtfsystem
configuration_files/: Maneuverlist.xml  Readme.txt
configuration_files/Sensorpresets/: preset_sensor_testing.xml
description/: CMakeLists.txt  MQTT.description  aadc.description
doc/doxygen/: change_log.txt
include/: ADTF_OpenCV_helper.h  MQTT_descriptions.h  ManeuverList.h  aadc_classification_structs.h  aadc_enums.h  aadc_geometrics.h  aadc_juryEnums.h  aadc_roadSign_enums.h  aadc_structs.h
src/aadcBase/: CMakeLists.txt
src/aadcBase/arduino/: CMakeLists.txt
src/aadcBase/arduino/arduino_communication/: CMakeLists.txt  arduino_us_sensors.cpp  arduino_us_sensors.h  arduino_us_sensors.plugindescription  arduino_us_sensors_debug.plugindescription
src/aadcBase/arduino/arduino_communication/helper/: Logger.h  SerialDeviceBoost.cpp  SerialDeviceBoost.h  arduino_com_client.cpp  arduino_com_client.h  arduino_com_helpers.h  arduino_protocol.h
src/aadcDemo/: CMakeLists.txt
src/aadcUser/: CMakeLists.txt
